# yt-dlp-clipper

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  vcpkg.json
.github/workflows/: release.yml
packaging/: yt-dlp-clipper.desktop
scripts/: make-appimage.sh  make-macos.sh  make-windows.ps1  make-windows.sh
src/: audio.rs  binaries.rs  cache.rs  decoder.rs  decoder_thread.rs  export.rs  format.rs  keybinds.rs  lib.rs  main.rs  theme.rs  widgets.rs  ytdlp.rs
tests/: decoder.rs  export.rs  ffmpeg_location.rs
tests/common/: mod.rs
